Google Maps Iframe on Mobile - design fixed

--- a/docs/style.css
+++ b/docs/style.css
@@ -353,7 +353,6 @@ p {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    width: 60%;
     margin: 20px auto;
     overflow: hidden;
     border-radius: 10px;
@@ -555,8 +554,16 @@ p {
 /* End Keyframes */
 
 @media only screen and (max-width: 768px) {
+    #locatie .project-item {
+        padding: 10px;
+    }
+
     #locatie .all-projects p {
         display: none;
+    }
+
+    #maps-frame {
+        width: 100%;
     }
 
     #header .hamburger {
